# ChangeLog for dev-python/wstools
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/wstools/ChangeLog,v 1.11 2012/08/02 22:15:36 neurogeek Exp $

  02 Aug 2012; Jesus Rivero <neurogeek@gentoo.org> wstools-0.3.ebuild,
  wstools-0.4.ebuild:
  Bumped to EAPI 4 and added xml(+) to PYTHON_USE_WITH

  22 Jul 2012; Anthony G. Basile <blueness@gentoo.org> wstools-0.3.ebuild,
  wstools-0.4.ebuild:
  Keyword ~ppc64, bug #381749

*wstools-0.4 (28 Jun 2012)

  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +wstools-0.4.ebuild:
  Bump

  13 May 2012; Alexis Ballier <aballier@gentoo.org> wstools-0.3.ebuild:
  keyword ~amd64-fbsd

  01 Feb 2012; Brent Baude <ranger@gentoo.org> wstools-0.3.ebuild:
  Marking wstools-0.3 ~ppc for bug 381749

  20 Sep 2011; Mike Gilbert <floppym@gentoo.org> wstools-0.3.ebuild:
  Require Python[xml]. Don't install .cvsignore files. Patch by Arfrever.

  14 Sep 2011; Fabian Groffen <grobian@gentoo.org> wstools-0.3.ebuild:
  Marked ~x86-macos, bug #382049

  11 Sep 2011; Raúl Porcel <armin76@gentoo.org> wstools-0.3.ebuild:
  Add ~alpha/~ia64/~s390/~sh/~sparc wrt #381749

  11 Sep 2011; Markus Meier <maekke@gentoo.org> wstools-0.3.ebuild:
  add ~arm, bug #381749

  10 Sep 2011; Jeroen Roovers <jer@gentoo.org> wstools-0.3.ebuild:
  Marked ~hppa (bug #381749).

*wstools-0.3 (04 Sep 2011)

  04 Sep 2011; Dirkjan Ochtman <djc@gentoo.org> +wstools-0.3.ebuild,
  +metadata.xml:
  Initial version of wstools (bug 381319).