@@ -1,16 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST wstools-0.3.tar.gz 150084 SHA256 c8956c50609d6205ac47ab4902a35c6bafb2227e04e051205a3ef2c05c91e440 SHA512 d9248fed37742fc2a9a8c5f02c9865b4099f42650834a1cc72025f732b2587e92fd8aeba438d06538b9edfe2c4b74fd2d44e0dfdd835c39c80b00d2215acd1f6 WHIRLPOOL d2df83da1f8791f805bf39d8b8d32c0e62283e9df17b91522b4dbc6da8036ecd74e7dacddcdb94a7e062f4b43d23cfe3016296198080e94875fe6c9d1acef6aa
 DIST wstools-0.4.tar.gz 149475 SHA256 da6708a2a4e12b2666dd2a29c8d9d4eaf3c808db41bb062a2df73b0c0983ae15 SHA512 69666814bb923f4bab1f8440480edf041e9d17a3c7117bb26588d39ad52b53fee4eb2d6e804df0573e4260c19cc6b42feb56f8c0f4666bf8a1a4ea35eb352d7b WHIRLPOOL 47604c2210d6a939a26535d7374b896ba6c21a72eeb26c865999fbbf498ec75e0e21a90675f40a981a144f172669bfa3d19a3f56013d28e83f6c2f3521941451
 EBUILD wstools-0.3.ebuild 820 SHA256 101257218b5ef4401287ab19ad3fde2b701c50a87c591b415d4743e90f7518b3 SHA512 d483f529334ab7dc2900b02fa82c8c7ff5157d20ba4223d873c225bc8126b4feba4ba5cbaa1f55b172bd25dfb5a33fd25a43acb4d12673151adb05ead9512cd6 WHIRLPOOL 0963ab3c3780cc33f77734ab3b2e6d29daffd2dc42880beb19465860c9d93961a0363c0463e1e954bb6af1dea10e433489f6cac1ae9a2ff5c7916d5fc95b974f
+EBUILD wstools-0.4-r1.ebuild 727 SHA256 7f300541bce04ba3ebf2055c99ef92a7b225dd217f18c9c5fe49d6d5b26aba1e SHA512 4ed2cbcf8b4740145a3a1d01674ca66c4f3213f3942249a916a619c0cd349b23c9cedef5c9f46b1d58ebffa26fb25a617562bac961e1b5bfab19464aeaed2502 WHIRLPOOL ddc4bef38223c5386173aaba7b5cc41da1e82d770a057f1a469075819c0c79ea718959d897c9a0ec399421ec4976b40aba4a168da3c74bf8f5e0780001a073d5
 EBUILD wstools-0.4.ebuild 819 SHA256 42b2a255efbb7a52bca3d1c915879ac963722073bae0ee02e34ef5b9a33bbc04 SHA512 1a634babb35e4bc655a274481424838c72f3cee28688a71dc42c273b77321c3424c1329a420469c1172a3867d354b96091215f3f6da4dc971b8e042477a96d85 WHIRLPOOL 5fd3418e0ccd86c0b2fef54cf91c78f93d51f29e57f9f5f3eba227d045ab85ec58c770866d27bc6fb3e5b7d17756017ad67e3c376662731755edd4f5bc10ffb9
-MISC ChangeLog 1517 SHA256 c85abaa587a74e1a79df7d6a5e939046802d75fe8361d6ae72325b46567a5252 SHA512 009c9aa90af8d54c498da3a5ac7bdba4a1165fd4305033c43b0884267a2b0557f3eb992e0704141ada940ee6784a4cc9c22494c6a44e89dfc5c951014d23c157 WHIRLPOOL 24c50e3951f37850ba4db9ac3fba8db061488a2f8ba73e791558acbb8a256d875d7f69ba3c064d7f922cd33a66bf9fd102e2582736854ca88d9ce26ee6b19d9c
+MISC ChangeLog 1647 SHA256 be0d1bdfda9fa1bf04b798884cbb717b35e4cb409875ed955a77cc20570dc62d SHA512 f6d0c88edee2ac8b5155ec0f77b105ffc7fb68c2140e0d52400853c33662381a9dae550bf205005708f0be9d49ad0b1488b37b7736b495fae40df5affda94d0f WHIRLPOOL 10d707092b06b42418a01f081634a6ec0f1c9211558201eea6b317a40430932ca0d327be1c02ba718a299f6c02aa54ac528a473a35c8144a5745a1eac59c3e05
 MISC metadata.xml 230 SHA256 58da341e443e0005cd334450981d303e236d841df61e41fb082737032a5ea8c9 SHA512 4d6c423d3cb490373ddd29cf60069d6e5c79847e297bf85dee81ac5d79d7b23c4154416345674c6c421492da5d5dc12a24c2451e467e4551c9bc677e80110878 WHIRLPOOL ccec136aa3eb62ddddcbc4eccfa290deafde36bc6c4b9a09632067c3fdcf6e7f282d20866fd04b1a16622c3ace7c7b78d424a54d2ea9869b643969dbe8b760d8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAlAaw8UACgkQdIssYB9vBoO3dwCghJvj6Jrb+psBy+BIesVAkLXi
-zIMAnRlqDXRvOZ8V48Au+Hq5dfgZWSaL
-=NXF3
+iJwEAQEIAAYFAlEety8ACgkQfXuS5UK5QB29ZQQAgdW9nt55r0Rnyzt0TXCsUfv2
+Gobh4ts6CVoOu93xBPJNhltLCyA+sraCwAmpze/Y9DcUbF0RKScWxgKRjnPqcuKg
+lmW9sL/IZGQHmOmYN2ByucH9FQbyv4xg/DwBIppm+73aPk1ghgl4+CuarMivfPvQ
+Poi1cHqWn6pXRk3oaGg=
+=67Sp
 -----END PGP SIGNATURE-----
